2002-12-15  Andrew Sobala  <andrew@sobala.net>

	* schemas/desktop_gnome_font_rendering.schemas.in: fixed typos

2002-12-10  Chema Celorio  <chema@celorio.com>

	* configure.in: remove autoheader warnings, remove acconfig.h

2002-12-10  Dennis Cranston  <dennis_cranston@yahoo.com>
 
	* capplets/accessibility/keyboard/*.desktop.in:
	* capplets/background/*.desktop.in:
	* capplets/default-applications/*.desktop.in:
	* capplets/desktop-links/*.desktop.in:
	* capplets/file-types/*.desktop.in:
	* capplets/font/*.desktop.in:
	* capplets/keybindings/*.desktop.in:
	* capplets/keyboard/*.desktop.in:
	* capplets/mouse/*.desktop.in:
	* capplets/network/*.desktop.in:
	* capplets/sound/*.desktop.in:
	* capplets/theme-switcher/*.desktop.in:
	* capplets/ui-properties/*.desktop.in:
	* capplets/url-properties/*.desktop.in:
	* capplets/windows/*.desktop.in:
	* control-center/*.desktop.in: Add StartupNotify support to 
	the .desktop files.
	
2002-12-09  Jody Goldberg <jody@gnome.org>

	* configure.in (dnl) : bump the gtk req t ohandle havoc's metacity
	  changes.

Wed Dec  4 14:34:27 2002  Jonathan Blandford  <jrb@redhat.com>
 
	* capplets/accessibility/keyboard/*.desktop.in:
	* capplets/background/*.desktop.in:
	* capplets/default-applications/*.desktop.in:
	* capplets/desktop-links/*.desktop.in:
	* capplets/file-types/*.desktop.in:
	* capplets/font/*.desktop.in:
	* capplets/keybindings/*.desktop.in:
	* capplets/keyboard/*.desktop.in:
	* capplets/mouse/*.desktop.in:
	* capplets/network/*.desktop.in:
	* capplets/sound/*.desktop.in:
	* capplets/theme-switcher/*.desktop.in:
	* capplets/ui-properties/*.desktop.in:
	* capplets/url-properties/*.desktop.in:
	* capplets/windows/*.desktop.in:
	* control-center/*.desktop.in: Patch from Fernando Herrera
	<fherrera@onirica.com> to add X-GNOME-BUGZILLA stuff to all the
	.desktop files.

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* schemas/*.schemas: Removed
	* schemas/*.schemas.in: Added
	* schemas/Makefile.am: Various fixes (#89361).