@@ -22,12 +22,12 @@
 	    <type>string</type>
             <default>grayscale</default>
             <locale name="C">
-	        <short>Antialising</short>
+	        <short>Antialiasing</short>
                 <long>
 		  The type of antialiasing to use when rendering fonts.
                   Possible values are: "none" - no antialiasing. 
                   "grayscale" - standard grayscale antialiasing.
-                  "rgba" - subpixel antialising. (LCD screens only).
+                  "rgba" - subpixel antialiasing. (LCD screens only).
 		</long>
             </locale>
         </schema>
@@ -58,7 +58,7 @@
 	        <short>RGBA Order</short>
                 <long>
                   The order of subpixel elements on an LCD
-                  screen; only used when antialising is set to "rgba".
+                  screen; only used when antialiasing is set to "rgba".
                   Possible values are: "rgb" - red on left, most common.
                   "bgr" - blue on left. "vrgb" - red on top. "vbgr" - 
                   red on bottom.
