@@ -1,3 +1,7 @@
+2002-12-17  Alex Duggan  <aldug@gnome.org>
+
+	* schemas/desktop_gnome_font_rendering.schemas.in: fixed more typos
+
 2002-12-15  Andrew Sobala  <andrew@sobala.net>
 
 	* schemas/desktop_gnome_font_rendering.schemas.in: fixed typos
